# AppCutShort

./: README.md  cookies.txt  dasdasdasd  requirements.txt
src/: main.py
src/cpp/: CMakeLists.txt  video_processor.cpp  video_processor.h
src/processing/: __init__.py  ai_processor.py  export_thread.py  process_thread.py
src/ui/: __init__.py  edit_screen.py  export_dialog.py  license_dialog.py  main_window.py  payment_dialog.py  pro_dialog.py  subtitle_dialog.py
src/utils/: thumbnail_thread.py  video_processor.py  youtube_downloader.py
temp/: subtitle.srt
